# RFP-agent-

./: .gitignore  DEMO_SCRIPT.md  README.md  WORKFLOW.md  e2e_results.json  e2e_test.py  events_dump.json  output.txt  pyproject.toml  qa_report.json  qa_report2.json  qa_test.py  qa_test2.py  remove_truncate.py  replace.py  script.py  sessions_dump.json  temp_pdf_out.txt  test_adk.py  test_mcp.py  test_tools.py  ui_script.py
.claude/: settings.json  settings.local.json
.claude/skills/rfp-agent-adk/: SKILL.md
.claude/skills/rfp-agent-adk/assets/: .env.example  agent.py
.claude/skills/rfp-agent-adk/references/: agents-and-prompts.md  rfp-domain.md
assets/: commercial_guidelines.md  economic_template.md  financial_guidelines.md  legal_guidelines.md  legal_template.md
company_templates/: compliance_template.md  technical_guidelines.md
data/: rfps.json
rfp_agent/: .env  agent.py  custom_tools.py  drive_api.py  i18n.py  main.py  mcp_bridge.py  pdf_engine.py  rfp_store.py
rfp_agent/.adk/: session.db
rfp_agent/templates/: _sidebar.html  _topbar.html  assistant.html  create.html  dashboard.html  documents.html  editor.html  evaluations.html  flowchart.html  rfp_creator.html  settings.html
