[project]
name = "rfp-agent"
version = "0.1.0"
description = "RFP Multi-Agent System using Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.5.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "reportlab>=4.0.0",
    "pymupdf>=1.20.0",
    "pillow>=10.0.0",
]
